# CrealityIM

./: .gitignore  README.md  build.bat  dev.bat  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  ws.rs
tools/: cors_proxy.js  start-cors-proxy.bat  websocket-debug.html
