[package]
name = "creality-im"
version = "0.1.0"
description = "Creality Cloud IM Client"
authors = ["HellBz3D"]
edition = "2021"

[lib]
name = "creality_im_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
open = "5"
urlencoding = "2"
keyring = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
